[package]
name = "rs-crypto"
version = "0.1.0"
authors = ["Michael Pyle <mpyle101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.33"
rand = "0.8.3"
rust-argon2 = "0.8.3"
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }